--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@
 	display: none;
 }
 
-.hide-friend-list ._5742 {
-	width: calc(100% - 74px);
-    left: 74px;
+.hide-friend-list ._5743 {
+	transform: translateX(37px);
 }
